Jamie's made an update

--- a/events.html
+++ b/events.html
@@ -8,6 +8,9 @@
     <div>
         <p>
             <a href="#">ask about our events hold up</a>
+            <div>
+                <center>center ariund the coner divs</center>
+            </div>
         </p>
     </div>
 </body>
